fix hide scrollbar for chrome

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -163,10 +163,8 @@ summary.unset::-webkit-details-marker { display: none; }
   }
 }
 
-.hide-scrollbar {
-  scrollbar-width: none;
-  &::-webkit-scrollbar { display: none; }
-}
+.hide-scrollbar { scrollbar-width: none; }
+.hide-scrollbar::-webkit-scrollbar { display: none; }
 
 .line-clamp {
   display: -webkit-box;
@@ -464,6 +462,9 @@ summary.unset::-webkit-details-marker { display: none; }
   grid-area: trigger;
   cursor: pointer;
   padding: 0.5rem;
+}
+
+#header-menu-state:checked + .header-trigger {
   color: var(--accent-1);
 }
 
@@ -602,7 +603,7 @@ summary.unset::-webkit-details-marker { display: none; }
   position: relative;
   padding-block: 1rem 2rem;
   background-color: var(--bg-light);
-  box-shadow: var(--shadow);
+  box-shadow: 0 2rem 2rem hsla(0, 0%, 0%, 0.25);
   max-height: calc(100vh - var(--header-height) - 2rem);
   overflow-x: hidden;
   overflow-y: auto;
